--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=admin
 
 server.error.include-stacktrace=never
+
+senha.secreta=${SENHA_SECRETA:1234567}
