--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Configurar java 21
         uses: actions/setup-java@v4
         with:
-          version: 21
-          distribution: temurin
+          java-version: '21'
+          distribution: 'temurin'
 
       - name: Subir banco de dados
         run: docker-compose up -d db
