--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -19,7 +19,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Subir banco de dados
-        run: docker-compose up -d db
+        run: docker compose up -d db --wait
 
       - name: Rodar testes
         run: mvn clean package
@@ -29,4 +29,4 @@ jobs:
           SPRING_DATASOURCE_PASSWORD: root
 
       - name: Desligar compose
-        run: docker-compose down
+        run: docker compose down
