--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,11 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: product_catalog_local_db
 
-
+    healthcheck:
+      test: ["CMD","mysqladmin","ping","-h","localhost","-proot"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   api:
     build: .
